<resources>
    <string name="app_name">BasicQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="e_g_stratos">e.g. Stratos</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="trophyImage">image</string>
    <string name="result">Result</string>
    <string name="bravo_congratulations">         Bravo !\nCongratulations !</string>
    <string name="username">Username</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="finish">FINISH</string>

</resources>