<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/ic_bg2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"

        >
    </TextView>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_trophy"
        android:contentDescription="@string/trophyImage"
        android:padding="10dp"

        >

    </ImageView>

    <TextView
        android:id="@+id/tvCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bravo_congratulations"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"

        >
    </TextView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        >
    </TextView>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_score_is_9_out_of_10"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/titleBgColor"

        >
    </TextView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="FINISH"
        android:textColor="@color/lightGrey"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/titleBgColor"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:elevation="36dp"
        >

    </com.google.android.material.button.MaterialButton>


</LinearLayout>